--- a/mobile/car-detail.html
+++ b/mobile/car-detail.html
@@ -90,14 +90,14 @@
 							class="cloudimage-360"
 							data-folder="./images/dummy/"
 							data-image-list-x='[
-								"@detail-car-image2.jpg",
-								"@detail-car-image2_1.jpg",
-								"@detail-car-image2_2.jpg",
-								"@detail-car-image2_3.jpg",
-								"@detail-car-image2_4.jpg",
-								"@detail-car-image2_5.jpg",
-								"@detail-car-image2_6.jpg",
-								"@detail-car-image2_7.jpg"
+								"@detail-car-image2.png",
+								"@detail-car-image2_1.png",
+								"@detail-car-image2_2.png",
+								"@detail-car-image2_3.png",
+								"@detail-car-image2_4.png",
+								"@detail-car-image2_5.png",
+								"@detail-car-image2_6.png",
+								"@detail-car-image2_7.png"
 								]'
 							data-spin-reverse
 							data-speed="10"
@@ -135,28 +135,28 @@
 						<div class="car-image-slider swiper-container" id="img-slider" style="display:none;">
 							<div class="swiper-wrapper">
 								<div class="swiper-slide">
-									<img src="images/dummy/@detail-car-image2.jpg" alt="차량대표이미지" />
+									<img src="images/dummy/@detail-car-image2.png" alt="차량대표이미지" />
 								</div>
 								<div class="swiper-slide">
-									<img src="images/dummy/@detail-car-image2_1.jpg" alt="차량대표이미지" />
+									<img src="images/dummy/@detail-car-image2_1.png" alt="차량대표이미지" />
 								</div>
 								<div class="swiper-slide">
-									<img src="images/dummy/@detail-car-image2_2.jpg" alt="차량대표이미지" />
+									<img src="images/dummy/@detail-car-image2_2.png" alt="차량대표이미지" />
 								</div>
 								<div class="swiper-slide">
-									<img src="images/dummy/@detail-car-image2_3.jpg" alt="차량대표이미지" />
+									<img src="images/dummy/@detail-car-image2_3.png" alt="차량대표이미지" />
 								</div>
 								<div class="swiper-slide">
-									<img src="images/dummy/@detail-car-image2_4.jpg" alt="차량대표이미지" />
+									<img src="images/dummy/@detail-car-image2_4.png" alt="차량대표이미지" />
 								</div>
 								<div class="swiper-slide">
-									<img src="images/dummy/@detail-car-image2_5.jpg" alt="차량대표이미지" />
+									<img src="images/dummy/@detail-car-image2_5.png" alt="차량대표이미지" />
 								</div>
 								<div class="swiper-slide">
-									<img src="images/dummy/@detail-car-image2_6.jpg" alt="차량대표이미지" />
+									<img src="images/dummy/@detail-car-image2_6.png" alt="차량대표이미지" />
 								</div>
 								<div class="swiper-slide">
-									<img src="images/dummy/@detail-car-image2_7.jpg" alt="차량대표이미지" />
+									<img src="images/dummy/@detail-car-image2_7.png" alt="차량대표이미지" />
 								</div>
 							</div>
 
@@ -220,12 +220,12 @@
 							
 							<div class="car-model">
 								<h2>
-									제네시스 G80<br /> 3.3 프리미엄 럭셔리
+									제네시스 더 올뉴G80 가솔린 2.5 AWD 기본형
 								</h2>
 							</div>
 							<div class="car-price">
 								<div class="price-wrap">
-									<span class="prc"><em>26,535,000</em>원</span>
+									<span class="prc"><em>35,535,000</em>원</span>
 									<div class="btn-group bt-right">
 										<button type="button" class="bt-favorite" style="display: inline;">찜</button>
 										<button type="button" class="bt-compare" style="display: inline;">비교하기</button>
@@ -297,31 +297,31 @@
 								<ul>
 									<li>
 										<span class="t">차량번호</span>
-										<span class="c">123가1234</span>
+										<span class="c">165라1367</span>
 									</li>
 									<li>
 										<span class="t">주행거리</span>
-										<span class="c">132,588km</span>
+										<span class="c">62,000km</span>
 									</li>
 									<li>
 										<span class="t">차종</span>
-										<span class="c">중형</span>
+										<span class="c">대형</span>
 									</li>
 									<li>
 										<span class="t">배기량</span>
-										<span class="c">1,955cc</span>
+										<span class="c">2,497cc</span>
 									</li>
 									<li>
 										<span class="t">연식</span>
-										<span class="c">19년11월</span>
+										<span class="c">22년11월</span>
 									</li>
 									<li>
 										<span class="t">연료</span>
-										<span class="c">디젤</span>
+										<span class="c">가솔린</span>
 									</li>
 									<li>
 										<span class="t">색상</span>
-										<span class="c">흰색</span>
+										<span class="c">검정</span>
 									</li>
 									<li>
 										<span class="t">변속기</span>
@@ -329,16 +329,16 @@
 									</li>
 									<li>
 										<span class="t">인승</span>
-										<span class="c">7인승</span>
+										<span class="c">5인승</span>
 									</li>
 									<li>
 										<span class="t">구동방식</span>
-										<span class="c">전륜구동</span>
+										<span class="c">4륜구동</span>
 									</li>
 								</ul>
 							</div>
 
-							<div class="car-options-detail area"><!-- 221111 : 옵션정보 영역 순서 이동 -->
+							<div class="car-options-detail area" style="padding-bottom:0; border-bottom:0;"><!-- 221111 : 옵션정보 영역 순서 이동 -->
 								<h3 class="s-title">옵션정보</h3>
 								<div class="options">
 									<ul id="detailOntionMin">
@@ -358,8 +358,8 @@
 							</div>
 
 							<div class="car-options-detail area">
-								<h3 class="s-title">선택옵션</h3>
-								<h3 class="s-title-sub"><em>3개의 선택사양(총 360만원 상당)</em>이 적용되어 있어요.</h3>
+								<!-- <h3 class="s-title">선택옵션</h3> -->
+								<h3 class="s-title-sub"><em>총 360만원 상당의 선택옵션이</em> 적용되어 있어요.</h3>
 								<div class="buyoption">
 									<ul>
 										<!-- 230717 옵션수정 -->
@@ -495,7 +495,7 @@
 								<div class="s-title-wrap">
 									<!-- 230628 텍스트 수정 -->
 									<h3 class="s-title">
-										성능점검
+										법정성능점검
 										<div class="common-layer-group posTop">
 											<button type="button" class="ir common-layer-bt">툴팁보기</button>
 											<div class="common-layer-tooptip custom-tooltip">
@@ -635,7 +635,7 @@
 							<!-- 판매자정보 -->
 							<div class="car-seller area">
 								<div class="seller-profile">
-									<div class="pic"><img src="https://mycarsave.lotterentacar.net/mobile/images/common/logo_vertical.png" alt="롯데렌터카 로고"></div>
+									<div class="pic"><img src="./images/renew/mycarsave_ci.png" alt="롯데렌터카 로고"></div>
 									<div class="info">
 										<!--  231005 수정 (매니저 배정이 없는 경우 대비, 지점명 먼저 노출) -->
 										<!-- <p class="name"><strong>강동규 대리</strong><a href="seller.html" class="shop">중고차영업1지점</a></p> --> <!-- 230914 수정(+ 지점명 p태그 -> a태그로 수정) -->
@@ -749,7 +749,7 @@
 											</div>
 											<div class="list-price">
 												<div class="price">
-													<p class="prc"><em>26,535,000</em>원</p> <!-- 230717 태그(span->p) 수정 -->
+													<p class="prc"><em>35,535,000</em>원</p> <!-- 230717 태그(span->p) 수정 -->
 												</div>
 											</div>
 										</div>
@@ -801,11 +801,10 @@
 
 							<!-- 기본형 -->
 							<div class="min-container">
-								<p class="blank">예상 견적 계산하기</p>
 								<p>
 									<span class="period"><em>총 구매 예상비용</em></span>
 								</p>
-								<span class="prc"><em>26,535,000</em>원 </span>
+								<span class="prc"><em>35,535,000</em>원 </span>
 							</div>
 
 							<!-- 확장형 -->
@@ -2246,28 +2245,28 @@
 				<div class="swiper mySwiper2">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
-							<img src="images/dummy/@detail-car-image2.jpg" alt="차량대표이미지" />
+							<img src="images/dummy/@detail-car-image2.png" alt="차량대표이미지" />
 						</div>
 						<div class="swiper-slide">
-							<img src="images/dummy/@detail-car-image2_1.jpg" alt="차량대표이미지" />
+							<img src="images/dummy/@detail-car-image2_1.png" alt="차량대표이미지" />
 						</div>
 						<div class="swiper-slide">
-							<img src="images/dummy/@detail-car-image2_2.jpg" alt="차량대표이미지" />
+							<img src="images/dummy/@detail-car-image2_2.png" alt="차량대표이미지" />
 						</div>
 						<div class="swiper-slide">
-							<img src="images/dummy/@detail-car-image2_3.jpg" alt="차량대표이미지" />
+							<img src="images/dummy/@detail-car-image2_3.png" alt="차량대표이미지" />
 						</div>
 						<div class="swiper-slide">
-							<img src="images/dummy/@detail-car-image2_4.jpg" alt="차량대표이미지" />
+							<img src="images/dummy/@detail-car-image2_4.png" alt="차량대표이미지" />
 						</div>
 						<div class="swiper-slide">
-							<img src="images/dummy/@detail-car-image2_5.jpg" alt="차량대표이미지" />
+							<img src="images/dummy/@detail-car-image2_5.png" alt="차량대표이미지" />
 						</div>
 						<div class="swiper-slide">
-							<img src="images/dummy/@detail-car-image2_6.jpg" alt="차량대표이미지" />
+							<img src="images/dummy/@detail-car-image2_6.png" alt="차량대표이미지" />
 						</div>
 						<div class="swiper-slide">
-							<img src="images/dummy/@detail-car-image2_7.jpg" alt="차량대표이미지" />
+							<img src="images/dummy/@detail-car-image2_7.png" alt="차량대표이미지" />
 						</div>
 					</div>
 					<div class="swiper-pagination"></div>
@@ -2276,28 +2275,28 @@
 					<div thumbsSlider="" class="swiper mySwiper1">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<img src="images/dummy/@detail-car-image2.jpg" alt="차량대표이미지" />
+								<img src="images/dummy/@detail-car-image2.png" alt="차량대표이미지" />
 							</div>
 							<div class="swiper-slide">
-								<img src="images/dummy/@detail-car-image2_1.jpg" alt="차량대표이미지" />
+								<img src="images/dummy/@detail-car-image2_1.png" alt="차량대표이미지" />
 							</div>
 							<div class="swiper-slide">
-								<img src="images/dummy/@detail-car-image2_2.jpg" alt="차량대표이미지" />
+								<img src="images/dummy/@detail-car-image2_2.png" alt="차량대표이미지" />
 							</div>
 							<div class="swiper-slide">
-								<img src="images/dummy/@detail-car-image2_3.jpg" alt="차량대표이미지" />
+								<img src="images/dummy/@detail-car-image2_3.png" alt="차량대표이미지" />
 							</div>
 							<div class="swiper-slide">
-								<img src="images/dummy/@detail-car-image2_4.jpg" alt="차량대표이미지" />
+								<img src="images/dummy/@detail-car-image2_4.png" alt="차량대표이미지" />
 							</div>
 							<div class="swiper-slide">
-								<img src="images/dummy/@detail-car-image2_5.jpg" alt="차량대표이미지" />
+								<img src="images/dummy/@detail-car-image2_5.png" alt="차량대표이미지" />
 							</div>
 							<div class="swiper-slide">
-								<img src="images/dummy/@detail-car-image2_6.jpg" alt="차량대표이미지" />
+								<img src="images/dummy/@detail-car-image2_6.png" alt="차량대표이미지" />
 							</div>
 							<div class="swiper-slide">
-								<img src="images/dummy/@detail-car-image2_7.jpg" alt="차량대표이미지" />
+								<img src="images/dummy/@detail-car-image2_7.png" alt="차량대표이미지" />
 							</div>
 						</div>
 					</div>
