--- a/mobile/car_list.html
+++ b/mobile/car_list.html
@@ -21,6 +21,7 @@
 <link rel="stylesheet" href="css/main.css" type="text/css" />
 <link rel="stylesheet" href="css/sub.css" type="text/css" />
 <link rel="stylesheet" href="css/process.css" type="text/css" />
+<link rel="stylesheet" href="css/search-list.css" type="text/css" />
 <!-- //front UI css -->
 
 <!--2024.09 개선화면 CSS-->
@@ -169,7 +170,7 @@
     </div>
 
     <div id="reactMainPage">
-      <div class="filter-menu layer_popup_wrappper" id="filterPopup" style="display: none;">
+      <div class="filter-menu layer_popup_wrappper" id="filterPopup">
         <div class="layer_popup bg-bottom">
           <div class="pop_inner">
             <div class="pop-head">
@@ -835,7 +836,7 @@
               </div>
               <div class="list-head">
                 <p class="list-total-count">
-                  <var> 1,038 </var>대
+                  <var> 1,325 </var>대
                 </p>
                 <div class="list-filter">
                   <button type="button" class="bt-condition-align">
@@ -919,7 +920,7 @@
                         </div>
                         <div class="swiper-slide" role="group" aria-label="6 / 27" style="width: 284px; margin-right: 16px;" onclick="location.href='./car-detail.html'">
                           <div class="img-wrap rentType">
-                            <img src="./images/test/LFILE_000016417320240507130114.png" alt="차량이미지">
+                            <img src="./images/test/LFILE_000026420020240923100323.png" alt="차량이미지">
                             <div class="timesaleWrap2">
                               <span class="ico-timesale1"></span>
                               <span class="txt">한정 특가</span>
@@ -945,8 +946,8 @@
                           </div>
                         </div>
                         <div class="swiper-slide" role="group" aria-label="7 / 27" style="width: 284px; margin-right: 16px;" onclick="location.href='./car-detail.html'">
-                          <div class="img-wrap ">
-                            <img src="./images/test/LFILE_000016445120240507133241.png" alt="차량이미지">
+                          <div class="img-wrap rentType">
+                            <img src="./images/test/LFILE_000012420120240311112158.png" alt="차량이미지">
                             <div class="timesaleWrap2">
                               <span class="ico-timesale1"></span>
                               <span class="txt">한정 특가</span>
@@ -966,147 +967,9 @@
                               <dd>45,434km</dd>
                             </dl>
                             <div>
-                              <p><var>13,424,000</var>원 <span></span>
+                              <p>월 <var>324,000</var>원 <span> / 24개월</span>
                               </p>
-                              <span class="price2"><var>12,471,000</var>원 </span>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="swiper-slide" role="group" aria-label="8 / 27" style="width: 284px; margin-right: 16px;" onclick="location.href='./car-detail.html'">
-                          <div class="img-wrap inprogress">
-                            <img src="./images/test/LFILE_000014839120240416124154.png" alt="차량이미지">
-                            <div class="timesaleWrap2">
-                              <span class="ico-timesale1"></span>
-                              <span class="txt">한정 특가</span>
-                              <span class="time">06 일 06 : 55 : 01</span>
-                            </div>
-                          </div>
-                          <div class="txt-wrap">
-                            <dl>
-                              <div class="badge">
-                                <ul>
-                                  <li class="officer">정기관리</li>
-                                </ul>
-                              </div>
-                              <dt>기아 신형K5 2.0 가솔린 트렌디</dt>
-                              <dd>2021/05(21년형)</dd>
-                              <dd>60,240km</dd>
-                            </dl>
-                            <div>
-                              <p><var>13,424,000</var>원 <span></span>
-                              </p>
-                              <span class="price2"><var>12,471,000</var>원 </span>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="swiper-slide" role="group" aria-label="9 / 27" style="width: 284px; margin-right: 16px;" onclick="location.href='./car-detail.html'">
-                          <div class="img-wrap ">
-                            <img src="./images/test/LFILE_000016704820240510141742.png" alt="차량이미지">
-                            <div class="timesaleWrap2">
-                              <span class="ico-timesale1"></span>
-                              <span class="txt">한정 특가</span>
-                              <span class="time">06 일 06 : 55 : 01</span>
-                            </div>
-                          </div>
-                          <div class="txt-wrap">
-                            <dl>
-                              <div class="badge">
-                                <ul>
-                                  <li class="officer">정기관리</li>
-                                  <li class="certification">무사고</li>
-                                </ul>
-                              </div>
-                              <dt>현대 쏘나타(DN8) G2.0 모던</dt>
-                              <dd>2021/12(21년형)</dd>
-                              <dd>54,473km</dd>
-                            </dl>
-                            <div>
-                              <p><var>13,424,000</var>원 <span></span>
-                              </p>
-                              <span class="price2"><var>12,471,000</var>원 </span>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="swiper-slide" role="group" aria-label="10 / 27" style="width: 284px; margin-right: 16px;" onclick="location.href='./car-detail.html'">
-                          <div class="img-wrap ">
-                            <img src="./images/test/LFILE_000017078620240517112002.png" alt="차량이미지">
-                            <div class="timesaleWrap2">
-                              <span class="ico-timesale1"></span>
-                              <span class="txt">한정 특가</span>
-                              <span class="time">06 일 06 : 55 : 01</span>
-                            </div>
-                          </div>
-                          <div class="txt-wrap">
-                            <dl>
-                              <div class="badge">
-                                <ul>
-                                  <li class="officer">정기관리</li>
-                                </ul>
-                              </div>
-                              <dt>현대 쏘나타(DN8) 1.6 터보 프리미엄 플러스</dt>
-                              <dd>2021/07(22년형)</dd>
-                              <dd>88,377km</dd>
-                            </dl>
-                            <div>
-                              <p><var>13,424,000</var>원 <span></span>
-                              </p>
-                              <span class="price2"><var>12,471,000</var>원 </span>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="swiper-slide" role="group" aria-label="11 / 27" style="width: 284px; margin-right: 16px;" onclick="location.href='./car-detail.html'">
-                          <div class="img-wrap ">
-                            <img src="./images/test/LFILE_000014299920240408131447.png" alt="차량이미지">
-                            <div class="timesaleWrap2">
-                              <span class="ico-timesale1"></span>
-                              <span class="txt">한정 특가</span>
-                              <span class="time">06 일 06 : 55 : 01</span>
-                            </div>
-                          </div>
-                          <div class="txt-wrap">
-                            <dl>
-                              <div class="badge">
-                                <ul>
-                                  <li class="officer">정기관리</li>
-                                  <li class="certification">무사고</li>
-                                </ul>
-                              </div>
-                              <dt>기아 신형K5 1.6 가솔린 터보 시그니처</dt>
-                              <dd>2022/07(22년형)</dd>
-                              <dd>52,025km</dd>
-                            </dl>
-                            <div>
-                              <p><var>13,424,000</var>원 <span></span>
-                              </p>
-                              <span class="price2"><var>12,471,000</var>원 </span>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="swiper-slide" role="group" aria-label="12 / 27" style="width: 284px; margin-right: 16px;" onclick="location.href='./car-detail.html'">
-                          <div class="img-wrap ">
-                            <img src="./images/test/LFILE_000014165820240405111503.png" alt="차량이미지">
-                            <div class="timesaleWrap2">
-                              <span class="ico-timesale1"></span>
-                              <span class="txt">한정 특가</span>
-                              <span class="time">06 일 06 : 55 : 01</span>
-                            </div>
-                          </div>
-                          <div class="txt-wrap">
-                            <dl>
-                              <div class="badge">
-                                <ul>
-                                  <li class="officer">정기관리</li>
-                                  <li class="certification">무사고</li>
-                                </ul>
-                              </div>
-                              <dt>현대 쏘나타(DN8) G2.0 프리미엄 플러스</dt>
-                              <dd>2022/06(22년형)</dd>
-                              <dd>55,309km</dd>
-                            </dl>
-                            <div>
-                              <p><var>13,424,000</var>원 <span></span>
-                              </p>
-                              <span class="price2"><var>12,471,000</var>원 </span>
+                              <span class="price2">월 <var>348,000</var>원 </span>
                             </div>
                           </div>
                         </div>
@@ -1422,12 +1285,11 @@
             }
         });
 
-            // 한정특가 타임딜 표기
-            function formatTimer(timer) {
-            return timer.toString().padStart(2, "0");
+        
+        function isFiltered() {
+            return 'ir bt-list-filter' + (this.props.isChange ? ' on' : '');
         }
 
-    
         function formatPromotionPeriod(promotion) {
             if (promotion < 0) {
                 return "00 : 00 : 00";
